--- a/app.json
+++ b/app.json
@@ -1,7 +1,20 @@
 {
   "expo": {
-    "name": "go-outside",
-    "slug": "go-outside",
-    "version": "1.0.0"
+    "name": "Keep It Moving",
+    "slug": "keep-it-moving",
+    "web": {
+      "bundler": "metro",
+      "description": "Get today's weather, news, popular recipes, and events near you. Get hourly updates.",
+      "favicon": "./logo-512.png"
+    },
+    "version": "1.0.0",
+    "android": {
+      "permissions": ["ACCESS_FINE_LOCATION"]
+    },
+    "ios": {
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "We need your location to provide weather updates based on your current location."
+      }
+    }
   }
 }
